--- a/Premiere/CSS/gallery.css
+++ b/Premiere/CSS/gallery.css
@@ -10,21 +10,25 @@ body * {
 .cards {
     display: flex;
     flex-wrap: wrap;
+    height: 80vh;
     margin: 0;
     padding: 0;
+    padding-left: 10px;
+    padding-bottom: 10px;
 }
 
 .card {
     width: calc(25% - 10px);
     height: calc(25% - 10px);
-    min-height: 160px;
+    min-height: 175px;
     background-size: cover;
     background-position: center;
     cursor: pointer;
-    margin: 5px;
+    margin-right: 10px;
+    margin-top: 10px;
 }
-.image:hover {
-    opacity: 0.7;
+.card:hover {
+    opacity: 0.5;
 }
 
 /* Media Queries */
